# BuddyAllocator

./: .gitignore  CMakeLists.txt  README.md
include/: Allocator.h  Allocator.inl  Timer.h
src/: Allocator.h  Allocator.inl  debug.h  main.cpp
tests/: CMakeLists.txt  generic_tests.cpp
